Deliver interactive Builder MVP
